# csc665-swingsage

./: .env.example  .gitignore  LICENSE  LSTM_Training_REGRESS.ipynb  LSTM_Training_REGRESS_Import.ipynb  LSTM_Training_REGRESS_V2.ipynb  LSTM_Training_Rise_Fall_REGRESS.ipynb  README.md  agent_run_log.txt  auto_stock_trader_agent.ipynb  combine.py  llm_decision_log.txt  llm_stock_analysis.ipynb  llm_training_data_aapl.csv  main.py  pyproject.toml  run_cloudflare.sh
combiner/: combine.py  generate_llm_data.py  generate_lstm_predictions.py
datasets/: combined_llm_lstm_aapl_30day.csv  combined_llm_lstm_aapl_90day.csv  llm_predictions_aapl.csv  llm_predictions_nvda.csv
frontend/: .env.example  README.md  app.py  requirements.txt  vercel.json
frontend/static/: script.js  style.css
frontend/templates/: index.html
models/: README.md  combiner_weights_30day.pt  combiner_weights_90day.pt  lstm_model.keras  scaler.json
