[project]
name = "csc665-swingsage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.1.2",
    "langchain-openai>=1.1.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.1",
    "ta>=0.11.0",
    "yfinance>=0.2.66",
    "torch>=2.0.0",
    "tensorflow>=2.15.0",
    "scikit-learn>=1.3.0",
    "jupyterlab>=4.0.0",
    "fastapi>=0.115.5",
    "uvicorn>=0.30.6",
    "requests>=2.32.3",
]
